--- a/www/skins/iwarsv2/css/tmpl-iwars.css
+++ b/www/skins/iwarsv2/css/tmpl-iwars.css
@@ -92,7 +92,8 @@ html>body #header {
 	padding: 12px 14px;
 	position: absolute;
 	z-index: 2;
-	background: url(../ress.png);
+	background: rgba(1, 18, 38, 0.6);
+	border: 1px solid #7190AB;
 	line-height: 2em;
 }
 
@@ -100,3 +101,13 @@ html>body #header {
 	height: 100px;
 	position: fixed;
 }
+
+/***
+ * Menu Block
+ **/
+#menu {
+	border-top-width: 3px;
+}
+/***
+ * /Menu Block
+ **/
