--- a/www/skins/iwarsv2/css/styles.css
+++ b/www/skins/iwarsv2/css/styles.css
@@ -479,7 +479,7 @@ div.valid {
 
 .line {
 	padding-left:12px;
-	background: url(../imgs/1.gif) 0 6xp no-repeat;
+	background: url(../imgs/1.gif) 0 6px no-repeat;
 }
 .end {
 	padding-left:12px;
@@ -655,7 +655,16 @@ div.Spy_1, div.Spy_2 {
 /***
  * Page: Notices
  **/
-.notices span, .notices > div:first-child label {
+#messages {
+	margin-bottom:20px;
+}
+#messages .alert {
+	margin-bottom:0;
+}
+.notice {
+	position:relative;
+}
+.notices span {
 	display:block;
 	height:30px;
 	padding: 5px 5px 5px 20px;
@@ -665,10 +674,6 @@ div.Spy_1, div.Spy_2 {
 	background: rgba(1, 18, 38, 0.6);
 	border: 1px solid rgba(1, 18, 38, 0.8);
 	border-radius: 2px 2px 10px;
-}
-.notices > div:first-child label {
-	text-align: center;
-	font-weight: bold;
 }
 
 .notices .button {
@@ -684,10 +689,23 @@ div.Spy_1, div.Spy_2 {
 }
 
 .f_checkbox label {
-	float:left;padding:1px;height:30px;width:30px;background-position:5px center;background-repeat:no-repeat;cursor:pointer}
-.f_checkbox label.reverse {
-	padding-left:20px;
+	float:left;padding:1px;height:30px;width:35px;background-position:5px center;background-repeat:no-repeat;cursor:pointer}
+.f_checkbox .reverse {
 	width:50%;
+	height: 30px;
+	padding: 0;
+	margin-bottom: 5px;
+	line-height: 18px;
+	background: rgba(1, 18, 38, 0.6);
+	border: 1px solid rgba(1, 18, 38, 0.8);
+	border-radius: 2px 2px 10px;
+}
+.f_checkbox .reverse strong, .f_checkbox .reverse div {
+	float:left;
+}
+.f_checkbox .reverse strong{
+	padding: 0 0 0 6px;
+	line-height:28px;
 }
 
 .f_checkbox > div {clear:both;}
