Ingrated last template modifications

--- a/www/skins/iwarsv2/css/bootstrap-theme.css
+++ b/www/skins/iwarsv2/css/bootstrap-theme.css
@@ -222,6 +222,8 @@ optgroup {
 	border:0;
 	background:none;
 	font-size: 14px;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 .popover.top {
